--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ target/
 .apt_generated
 .classpath
 .factorypath
-.project
+.project add .mvn/ mvnw/ mvnw.cmd pom.xml
 .settings
 .springBeans
 .sts4-cache
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Ambient Variables ###
+*application.yml*
