--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@number-flow/react": "^0.5.10",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom":	"^7.6.2"
+    "react-hook-form": "^7.62.0",
+    "react-router-dom": "^7.6.2",
+    "swiper": "^11.2.10",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
